# jackknify

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.py  tbump.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  update-cabs.yml
jackknify/: Cli.py  FitsHandler.py  Jackknife.py  MSHandler.py  __init__.py
recipes/: make-noise-map.yml
scripts/: generate_cabs.py
src/jackknify/: __init__.py
src/jackknify/cabs/: __init__.py  make_ms.yml  noise.yml  onboard.yml  realise.yml
src/jackknify/cli/: __init__.py  make_test_ms.py  noise.py  onboard.py  realise.py
src/jackknify/core/: CalcNoise.py  FitsHandler.py  MSHandler.py  __init__.py  calcnoise.py  fits_handler.py  jackknife.py  make_test_ms.py  ms_handler.py  noise.py  onboard.py  realise.py
tests/: test_install.py
